# OpenSidescan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  Jenkinsfile  LICENSE  Makefile  MakefileTravis  MakefileWindows  README.md
Scripts/: build_installer.bat  build_installer.sh  build_linux_unit_tests.sh  build_lock_test.sh  build_locker.sh  build_opensidescan.sh  build_opensidescan_gui.bat  build_opensidescan_win.bat  build_opensidescan_win.sh  cutReport.sh  fit-detector_unit-test.sh  package_opensidescan_gui.bat  sign_exe.au3  sign_installer.au3  test_installer.au3  tests.bat  win-unittest.bat  winlocktest.bat
ScriptsPython/: ComputeDistanceCarisVsOpenSidescan.py  Haversine.py  check_installation.py  update_sss_test_file_list.py
ScriptsTestGUI/: build_test_gui.bat  copy_dll_for_test_gui_gui.bat  gui_test_linux.sh  linux_test_gui.sh  run_test_gui.bat
artwork/: splash.xcf
doc/User-Manual/: OpenSidescan User Manual.html
installer/config/: config.xml
src/OpenSidescan/: Makefile  OpenSidescan.pro  OpenSidescan.pro.user.0d5e5e8.21  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  boolwithmutex.h  channelpropertieswindow.cpp  channelpropertieswindow.h  detectionwindow.cpp  detectionwindow.h  filepropertieswindow.cpp  filepropertieswindow.h  georeferencedobject.cpp  georeferencedobject.h  georeferencedobjectmenu.cpp  georeferencedobjectmenu.h  georeferencedobjectwindow.cpp  georeferencedobjectwindow.h  imagetab.cpp  imagetab.h  imagetablabel.cpp  imagetablabel.h  inventorywindow.cpp  inventorywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutdialog.cpp  moc_detectionwindow.cpp  moc_filepropertieswindow.cpp  moc_georeferencedobjectmenu.cpp  moc_georeferencedobjectwindow.cpp  moc_imagetab.cpp  moc_imagetablabel.cpp  moc_inventorywindow.cpp  moc_mainwindow.cpp  moc_projectwindow.cpp  opencvhelper.cpp  (+40 more)
src/OpenSidescan/detector/: detector.cpp  detector.h  houghdetector.cpp  houghdetector.h  roidetector.cpp  roidetector.h  yolov5detector.cpp  yolov5detector.h
src/OpenSidescan/inventoryobject/: inventoryobject.cpp  inventoryobject.h
src/OpenSidescan/machinelearning/: dbscan.cpp  dbscan.h
src/OpenSidescan/project/: project.cpp  project.h
src/OpenSidescan/refactorme/: progressdialognotclosingrightawayoncancel.cpp
src/OpenSidescan/resources/: icon.rc
src/OpenSidescan/sidescan/: sidescanfile.cpp  sidescanfile.h  sidescanimage.cpp  sidescanimage.h  sidescanimager.h
src/OpenSidescan/telemetryManager/: telemetrymanager.cpp  telemetrymanager.h
src/OpenSidescan/ui/about/: aboutdialog.cpp  aboutdialog.ui
src/OpenSidescan/ui/detection/: detectionwindow.cpp  detectionwindow.h  monitorwindow.cpp  monitorwindow.h  workerdetection.cpp  workerdetection.h
src/OpenSidescan/ui/docks/: channelpropertieswindow.cpp  channelpropertieswindow.h  filepropertieswindow.h  inventorywindow.cpp  inventorywindow.h  vesselgeometrywindow.cpp  vesselgeometrywindow.h
src/OpenSidescan/ui/docks/projectwindow/: projecttreeitem.cpp  projecttreeitem.h  projecttreemodel.h  projectwindow.cpp  projectwindow.h
src/OpenSidescan/ui/inventory/: inventoryobjectmenu.cpp  inventoryobjectmenu.h  inventoryobjectwindow.cpp  inventoryobjectwindow.h
src/OpenSidescan/ui/mainimage/: imagetab.cpp  imagetab.h  imagetablabel.cpp  imagetablabel.h
src/OpenSidescan/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorthread.cpp  monitorthread.h  workerimportsidescanfiles.cpp  workerimportsidescanfiles.h  workeropenproject.cpp  workeropenproject.h
src/OpenSidescan/ui/training/: parameterscvCreateTrainingSamples.cpp  parameterscvCreateTrainingSamples.h  trainingsampleswindow.cpp  workertrainingsamples.cpp  workertrainingsamples.cpp.autosave  workertrainingsamples.h
src/OpenSidescan/utilities/: DirectoryMonitor.hpp  FileLockUtils.h  SideScanFileProcessor.hpp  opencvhelper.cpp  opencvhelper.h
src/build-OpenSidescan-Desktop-Debug/: Makefile  moc_aboutdialog.cpp  moc_detectionwindow.cpp  moc_filepropertieswindow.cpp  moc_georeferencedobjectmenu.cpp  moc_georeferencedobjectwindow.cpp  moc_imagetab.cpp  moc_imagetablabel.cpp  moc_inventorywindow.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_projectwindow.cpp  moc_splashdialog.cpp  qrc_resources.cpp  qrc_style.cpp  ui_mainwindow.h  ui_splashdialog.h
src/cli/: fit-detector.cpp  haralick-analysis.cpp  sidescan-detect.cpp  sidescan-dump.cpp  sidescan-glcm.cpp
test/: CMakeLists.txt  DependencyTest.hpp  DetectObjectsTest.hpp  FileLockLinuxTest.hpp  GeoreferencingTest.hpp  MonitorTest.hpp  OpenCvTest.hpp  SideScanImagerTest.hpp  XtfSupportTest.hpp  fileLockTest.hpp  ga.pl  lockTestCatch.cpp  main.cpp  winFileLockTest.hpp  winLockCatchMain.cpp
test/data/ghostfishinggear/: abandoned-nets1.xtf.hits  crabtrap1.xtf.hits  crabtrap2.xtf.hits  crabtrap3.xtf.hits  crabtrap4.xtf.hits  crabtrap5.xtf.hits
test/data/projects/: TestProject5Files.ssp
test/data/wrecks/: plane1.xtf.hits  scotsman-iver2.xtf  scotsman-iver2.xtf.hits  scotsman1.xtf.hits  scotsman2.xtf.hits  scotsman3.xtf.hits  scotsman4.xtf.hits  scotsman5.xtf.hits  scotsman6.xtf.hits  scotsman7.xtf.hits  scotsman8.xtf.hits
test/data/wrecks/scotsman5info/: ScotsmanLongitudeLatitudeCaris.csv  ScotsmanLongitudeLatitudeOpenSidescan2020-03-18.csv  reference points on SSS scotsman5.pptx
test/fit-detector_unit-test/: CMakeLists.txt  fit-detector_test.cpp  fit-detector_test.hpp  main.cpp
test/linuxFileLockTest/: CMakeLists.txt  FileLockLinuxTest.hpp  main.cpp
test/locker/: Makefile  locker.cpp  winlocker.cpp
test/testGUI/: CMakeLists.txt  old_testGUI.cpp  testGUI.cpp  testGUI.pro
test/testGUI2/: CMakeLists.txt  testGUI2.cpp
test/testProject/: TestProject5Files.ssp  TestProject5FilesWithObjects.ssp
test/unitTests/: CMakeLists.txt  DetectObjectsTest.cpp  GeoreferencingTest.cpp  ProjectTest.h  SideScanImagerTest.h  main.cpp  unitTests.pro
test/win-fileLock-test/: CMakeLists.txt  winFileLockTest.hpp  winLockCatchMain.cpp  winlocker.cpp
test/windowsLockTest/: CMakeLists.txt  buildScript.bat  winlocker.cpp
